<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/match_parent_width"
    android:layout_height="@dimen/match_parent_height"
    android:background="@drawable/login_background">
    <!--ImageView
        android:id="@+id/imageViewTitleBar"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:src="@drawable/login_title_bar"/>
    <ImageView
        android:id="@+id/imageViewTitle"
        android:layout_width="115dp"
        android:layout_height="21dp"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/imageViewTitleBar"
        android:layout_marginTop="22.5dp"
        android:src="@drawable/title_login"/-->

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="@dimen/match_parent_width"
        android:layout_height="80dp"
        android:background="@drawable/login_title_bar">

        <!--ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/button_back_arrow" /-->

        <ImageView
            android:id="@+id/imageViewTitle"
            android:layout_width="115dp"
            android:layout_height="35dp"
            android:layout_marginTop="24dp"
            android:layout_centerHorizontal="true"
            android:scaleType="center"
            android:src="@drawable/title_login" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textViewIndexUserId"
        android:layout_width="250dp"
        android:layout_height="15dp"
        android:layout_below="@id/header"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="35dp"
        android:text="@string/loginid"
        android:textColor="#3E1E01"
        android:textSize="12dp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/editTextId"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewIndexUserId"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:nextFocusForward="@+id/editTextPass"
        android:imeOptions="actionNext"
        android:textSize="@dimen/sp16"
        android:textColor="@color/black"
        android:background="@drawable/textbox"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:hint="@string/regist_limit_2"/>
    <TextView
        android:id="@+id/textViewIndexPassword"
        android:layout_width="250dp"
        android:layout_height="15dp"
        android:layout_below="@id/editTextId"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="35dp"
        android:text="@string/password"
        android:textColor="#3E1E01"
        android:textSize="12dp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewIndexPassword"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:imeOptions="actionDone"
        android:textSize="@dimen/sp16"
        android:textColor="@color/black"
        android:background="@drawable/textbox"
        android:singleLine="true"
        android:inputType="textPassword"
        android:hint="@string/regist_limit_2"/>
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editTextPass"
        android:layout_marginTop="25dp"
        android:textSize="@dimen/sp12"
        android:textColor="@color/black"
        android:background="@drawable/button_login"/>
    <ImageView
        android:layout_width="256dp"
        android:layout_height="60dp"
        android:layout_marginLeft="-10dp"
        android:layout_marginTop="435dp"
        android:src="@drawable/balloon"
        />
    <TextView
        android:id="@+id/textMessageLogin"
        android:layout_width="164dp"
        android:layout_height="44dp"
        android:text="@string/login_message_1"
        android:textAlignment="center"
        android:textColor="#3E1E01"
        android:textSize="11dp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="452dp"
        />
    <Button
        android:id="@+id/buttonContact"
        android:layout_width="85dp"
        android:layout_height="37dp"
        android:layout_below="@id/textMessageLogin"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="60dp"
        android:textSize="@dimen/sp12"
        android:textColor="@color/black"
        android:background="@drawable/button_orange_small"
        android:textStyle="bold"
        android:text="@string/contact"/>
    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="420dp"
        android:src="@drawable/poiko_normal_1"/>
</RelativeLayout>